fix: remove redundant JS for button visibility and replaced with css

--- a/src/styles/Extn-CollapseFolders.less
+++ b/src/styles/Extn-CollapseFolders.less
@@ -17,9 +17,9 @@
         font-size: 0.5em;
         line-height: 1;
     }
+}
 
-    &.show {
-        opacity: 1;
-        visibility: visible;
-    }
+#sidebar:hover #collapse-folders {
+    opacity: 1;
+    visibility: visible;
 }
